tests/lean/field_type_mismatch.lean
namespace test

instance : has_add nat :=
{add := nat.succ}

instance : semigroup nat :=
{mul       := nat.add,
 mul_assoc := trivial }

end test
